Fix spacing for navbar on phone

--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,18 @@ div>p {
     .projectRightOne, .projectLeftOne {
         height: 150vh;
     }
+    nav {
+        display: flex;
+        font-size: .75em;
+        justify-content: space-around;
+    }
+    nav > a {
+        margin-right: 5px;
+    }
+    header > h1{
+        margin: 10px;
+        font-size: 1.25em;
+    }
 }
 
 @media only screen and (max-width: 330px) {
